[package]
name = "sosp"
version = "0.1.0"
authors = ["YushiOMOTE <yushiomote@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9"
com_logger = "0.1.0"
log = { version = "0.4.14", default-features = false }
x86_64 = "0.13.2"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-serial", "stdio", "-display", "none"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 0x21
test-timeout = 300
