[package]
name = "sosp"
version = "0.1.0"
authors = ["YushiOMOTE <yushiomote@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = { version = "0.9.14", features = ["map_physical_memory"] }
com_logger = "0.1.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"], default-features = false }
linked_list_allocator = "0.8.11"
log = { version = "0.4.14", default-features = false }
x86_64 = "0.13.2"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-serial", "stdio", "-display", "none"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 0x21
test-timeout = 300

[[test]]
name = "stack_overflow"
harness = false
